# easy_psychiatry_lecture

./: .gitignore  Daycare.hs  Lecture.hs  chapters.txt  lecture.cabal  lecture01.hs  lecture02.hs  lecture03.hs  lecture04.hs  lecture05.hs  lecture06.hs  lecture07.hs  lecture08.hs  lecture09.hs  lecture10.hs  lecture11.hs  lecture12.hs  lecture13.hs  lecture_daycare.hs  lecture_daycare.md  stack.yaml
