build-type: Simple
name: lecture
version: 0.1

cabal-version: >= 1.2

executable lecture08
    main-is: lecture08.hs
    build-depends: base, yjsvg, random, xturtle
    ghc-options: -Wall -fno-warn-tabs
    other-modules: Lecture, WriteTree

executable lecture09
    main-is: lecture09.hs
    build-depends: base, yjsvg, random, xturtle
    ghc-options: -Wall -fno-warn-tabs
    other-modules: Lecture, WriteTree

executable lecture10
    main-is: lecture10.hs
    build-depends: base, yjsvg, random, xturtle
    ghc-options: -Wall -fno-warn-tabs
    other-modules: Lecture, WriteTree
